<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:id="@+id/username"
        android:hint="@string/prompt_email"
        android:maxLines="1"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:id="@+id/password"
        android:hint="@string/prompt_password"
        android:maxLines="1"
        android:singleLine="true"
        android:imeActionId="@integer/loginImeActionId"
        android:imeActionLabel="@string/login"
        android:imeOptions="actionUnspecified"
        />
    <!--android:imeActionId="@+id/edittext_action_login"-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/login_button"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        />
</LinearLayout>